Fix qa gate when use java streams and removed some unused imports