@@ -1,8 +1,6 @@
 package com.tasksrest.api.kanban.application;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import com.tasksrest.api.kanban.application.service.KanbanResponse;
 import com.tasksrest.api.kanban.domain.Kanban;
 import com.tasksrest.api.kanban.domain.KanbanRepository;
@@ -19,6 +17,6 @@ public class GetAllKanban {
         
         return kanbans.stream()
             .map(kanban -> new KanbanResponse(kanban))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
