@@ -1,7 +1,6 @@
 package com.tasksrest.api.shared.application;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.tasksrest.api.shared.application.service.TaskResponse;
 import com.tasksrest.api.shared.domain.Task;
@@ -20,6 +19,6 @@ public class GetTasks {
         
         return tasks.stream()
             .map(task -> { return new TaskResponse(task); })
-            .collect(Collectors.toList());
+            .toList();
     }
 }
